--- a/web-sayfam/package.json
+++ b/web-sayfam/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.3.1"
   }
 }
